--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<img scr="https://github.com/chiy3/portfolio/blob/master/eric.svg">
+<img scr="portfolio/eric.svg">
 </body>
 </html>
