--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
+<svg version="1.1" id="圖層_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1023.6 705.9" style="enable-background:new 0 0 1023.6 705.9;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#CFAF62;}
+	.st1{font-family:'Geneva';}
+	.st2{font-size:86.3311px;}
+</style>
+<g>
+	<polygon class="st0" points="533.4,218.6 541.3,233.8 547.2,234.9 560.1,223.4 553.6,222.2 545.5,227.6 540.5,219.9 	"/>
+	<polygon class="st0" points="537,239.9 546.7,241.6 532.8,305.3 523.1,303.6 	"/>
+	<g>
+		<text transform="matrix(1.117 0 0 1 401.5741 305.3401)"><tspan x="0" y="0" class="st1 st2">ER </tspan><tspan x="130.8" y="0" class="st0 st1 st2">C</tspan></text>
+	</g>
+</g>
+</svg>
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
