--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
 Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100002158816472"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://www.instagram.com/ericychi__/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/yucheng-chi/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
