--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1>Hey Y'all! <br>I'm Eric</h1>
-										 		<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+										 		<p><a class="btn btn-primary btn-learn" href="#">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
-					   			</div>
+					   			</div> 
 					   		</div>
 				   		</div>
 				   	</li>
@@ -116,7 +116,24 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" >View LinkedIn <i class="icon-briefcase3"></i></a></p>
+											</div>
+					   				</div>
+					   			</div>
+					   		</div>
+				   		</div>
+				   	</li>
+				  	</ul>
+			  	</div>
+				   	<li style="background-image: url(images/img_bg_3.jpg);">
+				   		<div class="overlay"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+					   				<div class="slider-text-inner">
+					   					<div class="desc">
+						   					<h1>I am <br>a Designer</h1>
+												<p><a class="btn btn-primary btn-learn" href="#" >View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
