--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Thanks to <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </a></span></small></p>
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472"><i class="icon-facebook2"></i></a></li>
