--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Eric Chi</title>
+	<title>Eric Chi' Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -56,9 +56,9 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Eric Chi</a></h1>
-				<span class="position"><a href="#">UI/UX Designer</a> in USA</span>
+				<div class="author-img" style="background-image: url(images/eric.svg);"></div>
+				<h1 id="colorlib-logo"><a href="index.html">Yucheng Chi</a></h1>
+				<span class="position"><a href="https://en.wikipedia.org/wiki/User_experience_design">UI/UX Designer</a> in USA</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -131,7 +131,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Us</span>
+										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Yu-Cheng Chi</strong> You can also call me Eric. I'm still working on my personal website!</p>
 										<p>Hope see you guys soon !</p>
@@ -183,8 +183,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<span class="heading-meta">Skills</span>
+							<h2 class="colorlib-heading">What can I do?</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -289,7 +289,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Experience</span>
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<h2 class="colorlib-heading animate-box">What have I done?</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -374,8 +374,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Work</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+							<span class="heading-meta">My Works</span>
+							<h2 class="colorlib-heading animate-box">What have I got?</h2>
 						</div>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
@@ -487,8 +487,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Get in Touch</span>
-							<h2 class="colorlib-heading">Contact</h2>
+							<span class="heading-meta">Contact me</span>
+							<h2 class="colorlib-heading">This is for you!</h2>
 						</div>
 					</div>
 					<div class="row">
