--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
-
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/eric.svg);"></div>
+				<div class="author-img" style="background-image: url(images/eric.s);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Yucheng Chi</a></h1>
 				<span class="position"><a href="https://en.wikipedia.org/wiki/User_experience_design">UI/UX Designer</a> in USA</span>
 			</div>
