--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/eric.s);"></div>
+				<div class="author-img" style="background-image: url(images/eric.svg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Yucheng Chi</a></h1>
 				<span class="position"><a href="https://en.wikipedia.org/wiki/User_experience_design">UI/UX Designer</a> in USA</span>
 			</div>
