--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that 300+ projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
+										<h2>I am happy to know you <br>Please feel free to say anything to me!</h2>
+										<a href="chiyyyy@utexas.edu" class="btn-hire">Email me</a>
 									</div>
 								</div>
 							</div>
@@ -380,7 +380,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span></p>
 						</div>
 					</div>
 					<div class="row">
@@ -390,11 +390,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
 										<span>Website</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
 									</div>
 								</div>
 							</div>
