--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>Please feel free to say anything to me!</h2>
-										<a href="chiyyyy@utexas.edu" class="btn-hire">Email me</a>
+										<h2>Wanna know more about me? <br> Download my resume below!</h2>
+										<a href="#" class="btn-hire">Download CV</a>
 									</div>
 								</div>
 							</div>
@@ -303,7 +303,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
+					                  <h2>Graduate Student of University of Texas at Austin<span> 2018-2020</span></h2>
 					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
 					               </div>
 					            </div>
@@ -316,7 +316,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Front End Developer at Google Company</a> <span>2017-2018</span></h2>
+					               	<h2>Web Developer at Institute of TESOL <span>2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -328,7 +328,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span>2017-2018</span></h2>
+					               	<h2> Intern at Beijing GuanZheng Accounting Firm <span>2016</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -340,23 +340,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
+					               	<h2>Bachelor of Humanities & Social Sciences at NCTU<span>2017-2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-5">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					               </div>
-					            </div>
-					         </article>
+					        
 
 					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
@@ -380,7 +370,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span></p>
 						</div>
 					</div>
 					<div class="row">
@@ -471,9 +460,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 animate-box">
-							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
-						</div>
 					</div>
 				</div>
 			</section>
