--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Eric Chi' Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="Eric's Portfolio" />
+	<meta name="keywords" content="UI UX Design Designer Portfolio Eric Chi Yucheng Yu-Cheng" />
+	<meta name="author" content="Eric Chi" />
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
