--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <h2>I'm a photographer</h2>
+          <h2>I'm a designer</h2>
           <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>    
         </div>
       </div>
