--- a/index.html
+++ b/index.html
@@ -133,8 +133,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Yu-Cheng Chi</strong> You can also call me Eric. I'm still working on my personal website!</p>
-										<p>Hope see you guys soon !</p>
+										<p><strong>Yu-Cheng Chi, a current graduate student of Information Science at University of Texas at Austin. I have 3+ year exerpience in social design & research and 2+ years experience in Front-End developement.</strong></p>
+										
+										<p>With the bakcground both in humanities social science and information science, All I focus is users. This speaks to why I'm passionate about solving problems in both digital and  real world for all users. My works combine user research, user-centered design and UX/UI design. </p>
+
+										<p> As a student and designer, I desire challenges and chances to test myself. I believe challenges is the best way of self-reflection, which is the key to outstanding. My career goal is to deliver a simple but wonderful experience to all users.</p>
+										
 									</div>
 								</div>
 							</div>
@@ -142,25 +146,25 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Graphic Design</h3>
+										<h3>Creative</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
-										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Design</h3>
+										<span class="icon2"><i class="icon-fire2"></i></span>
+										<h3>Passionate</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Software</h3>
+										<span class="icon2"><i class="icon-paperplane"></i></span>
+										<h3>Innovative</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Application</h3>
+										<span class="icon2"><i class="icon-target3"></i></span>
+										<h3>Challenging</h3>
 									</div>
 								</div>
 							</div>
@@ -191,10 +195,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-1">
 								<span class="icon">
-									<i class="icon-bulb"></i>
+									<i class="icon-pencil"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
+									<h3>Design</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -202,7 +206,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-pen"></i>
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
