--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-pen"></i>
+									<i class="icon-document"></i>
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
