--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Yu-Cheng Chi, a current graduate student of Information Science at University of Texas at Austin. I have 3+ year exerpience in social design & research and 2+ years experience in Front-End developement.</strong></p>
+										<p><strong>Eric Chi, a current graduate student of Information Science at University of Texas at Austin. I have 3+ year exerpience in social design & research and 2+ years experience in Front-End developement.</strong></p>
 										
 										<p>With the bakcground both in humanities social science and information science, All I focus is users. This speaks to why I'm passionate about solving problems in both digital and  real world for all users. My works combine user research, user-centered design and UX/UI design. </p>
 
@@ -209,7 +209,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-document"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
+									<h3>Research</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -220,7 +220,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
+									<h3>Empathy</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -231,7 +231,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Graphic Design</h3>
+									<h3>Coding</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -242,7 +242,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
+									<h3>Prototyping</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -253,7 +253,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
+									<h3>Collabration</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -269,7 +269,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="1985" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -303,7 +303,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					            <div class="timeline-entry-inner">
 
 					               <div class="timeline-icon color-1">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-user-add"></i>
 					               </div>
 
 					               <div class="timeline-label">
@@ -317,7 +317,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-user-add"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Web Developer at Institute of TESOL <span>2018</span></h2>
@@ -329,7 +329,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-3">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-user-add"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2> Intern at Beijing GuanZheng Accounting Firm <span>2016</span></h2>
@@ -341,10 +341,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-4">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-user-add"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2>Bachelor of Humanities & Social Sciences at NCTU<span>2017-2018</span></h2>
+					               	<h2>Bachelor of Humanities & Social Sciences at NCTU <span>2012-2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -456,7 +456,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-5">
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-globe-outline"></i>
+									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
 									<p>chiyyyy@utexas.edu</a></p>
@@ -465,7 +465,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-map"></i>
+									<i class="icon-location-arrow"></i>
 								</div>
 								<div class="colorlib-text">
 									<p>Austin, Texas</p>
