--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-document"></i>
+									<i class="icon-globe-outline"></i>
 								</span>
 								<div class="desc">
 									<h3>Research</h3>
@@ -217,18 +217,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-3">
 								<span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-								<div class="desc">
-									<h3>Empathy</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-4">
-								<span class="icon">
-									<i class="icon-layers2"></i>
+									<i class="icon-codepen"></i>
 								</span>
 								<div class="desc">
 									<h3>Coding</h3>
@@ -237,9 +226,20 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
+							<div class="services color-4">
+								<span class="icon">
+									<i class="icon-heart3"></i>
+								</span>
+								<div class="desc">
+									<h3>Empathy</h3>
+									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
 							<div class="services color-5">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-file-openoffice"></i>
 								</span>
 								<div class="desc">
 									<h3>Prototyping</h3>
@@ -250,7 +250,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-6">
 								<span class="icon">
-									<i class="icon-phone3"></i>
+									<i class="icon-flow-children"></i>
 								</span>
 								<div class="desc">
 									<h3>Collabration</h3>
@@ -262,7 +262,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				</div>
 			</section>
 			
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
+			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/IMG_5418.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -303,7 +303,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					            <div class="timeline-entry-inner">
 
 					               <div class="timeline-icon color-1">
-					                  <i class="icon-user-add"></i>
+					                  <i class="icon-user"></i>
 					               </div>
 
 					               <div class="timeline-label">
@@ -317,7 +317,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
-					                  <i class="icon-user-add"></i>
+					                  <i class="icon-user"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Web Developer at Institute of TESOL <span>2018</span></h2>
@@ -329,7 +329,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-3">
-					                  <i class="icon-user-add"></i>
+					                  <i class="icon-user"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2> Intern at Beijing GuanZheng Accounting Firm <span>2016</span></h2>
@@ -341,7 +341,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-4">
-					                  <i class="icon-user-add"></i>
+					                  <i class="icon-user"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Bachelor of Humanities & Social Sciences at NCTU <span>2012-2018</span></h2>
