--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>不要一直偷看我好嗎 <3 <br> <br> <br></p>
 								</div>
 							</div>
 						</div>
