--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<meta name="author" content="Eric Chi" />
 
   <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
+	<meta property="og:title" content="Eric Chi; UI UX Design"/>
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
+	<meta property="og:url" content="ycchi.com"/>
+	<meta property="og:site_name" content="Eric's Portfolio"/>
+	<meta property="og:description" content="Come here to know more about Eric Chi"/>
+	<meta name="twitter:title" content="Portfolio" />
 	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
+	<meta name="twitter:url" content="ycchi.com" />
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -98,7 +98,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1>Hey Y'all! <br>I'm Eric</h1>
-										 		<p><a class="btn btn-primary btn-learn" href="#">Download CV <i class="icon-download4"></i></a></p>
+										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div> 
@@ -172,7 +172,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>Wanna know more about me? <br> Download my resume below!</h2>
-										<a href="#" class="btn-hire">Download CV</a>
+										<a href="https://drive.google.com/file/d/1jZCDNVBCqv0ZLyzsW-Xk6wTGeEi-rc73/view?usp=sharing" class="btn-hire">Download CV</a>
 									</div>
 								</div>
 							</div>
@@ -386,7 +386,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 					               <div class="timeline-label">
 					                  <h2>Graduate Student of University of Texas at Austin<span> 2018-2020</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <p>I'm so proud of being a student of Master of Information Sciences at UT! <br>
+					                  I focus on user experience research and design. As I mentioned above, UX is all my passion at. From the UT iSchool, I can gain better opportunities to devote myself in what I love.  </p>
 					               </div>
 					            </div>
 					         </article>
@@ -399,7 +400,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Web Developer at Institute of TESOL <span>2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					                  <p>Web development and front-end developemnt is another field where I have deep love for. It has also insprired me to become a UX designer. During the days as a developer, I gained countless feedback from the users and manager. All the feedback brought me fulfillment and motivated me to swift my career goal to UX. </p>
 					               </div>
 					            </div>
 					         </article>
@@ -411,7 +412,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					               </div>
 					               <div class="timeline-label">
 					               	<h2> Intern at Beijing GuanZheng Accounting Firm <span>2016</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					                  <p>Internship is always perfect for me to boost my personal ability. It is inexplicable to express how much did I learn during the time in Beijing. All I can tell is I'll do my best to seize every chances to get another internship. </p>
 					               </div>
 					            </div>
 					         </article>
@@ -423,7 +424,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Bachelor of Humanities & Social Sciences at NCTU <span>2012-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					                  <p> Here is starting point for my wonderful journey! Having majored in humanities & social sciences and minored in management sciences, I not only learned how to do research about people and design for solutions, but also practiced them in real world. I promised myself to make contributions to people and society when I was 18. Now, I'm right on the way to my goal.     
+					                  </p>
 					               </div>
 					            </div>
 					         </article>
