--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
   <header role="banner" class="probootstrap-header">
     <div class="container">
         
-  <P Align=left> <a href="ycchi.com"><img src="work/img/eric.svg"> </a></p>     
+  <P Align=left> <a href="ycchi.com"><img src="work/img/eric.svg" width="50%" height="30%"> </a></p>     
        
     </div>
   </header>
