--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				</div>
 			</section>
 			
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/IMG_5418.jpg);" data-stellar-background-ratio="0.5">
+			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/1516036.jpeg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -424,7 +424,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Bachelor of Humanities & Social Sciences at NCTU <span>2012-2018</span></h2>
-					                  <p> Here is starting point for my wonderful journey! Having majored in humanities & social sciences and minored in management sciences, I not only learned how to do research about people and design for solutions, but also practiced them in real world. I promised myself to make contributions to people and society when I was 18. Now, I'm right on the way to my goal.     
+					                  <p> Here is starting point for my wonderful journey! Having majored in humanities & social sciences and minored in management sciences, I not only learned how to do research about people and design for solutions, but also practiced them in real world. I promised myself to make contributions to people and society when I was 18. Now, I'm on the right path to my goal.     
 					                  </p>
 					               </div>
 					            </div>
