--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 				</div>
 			</section>
 
-<section class="colorlib-work" data-section="work">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+				<section class="colorlib-work" data-section="work">
+							<div class="colorlib-narrow-content">
+								<div class="row">
+									<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Works</span>
 							<h2 class="colorlib-heading animate-box">What have I got?</h2>
 						</div>
@@ -277,7 +277,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Design</h3>
-									<p>不要一直偷看我好嗎 <3 <br> <br> <br></p>
+									<p>Design is undividable from my daily life. With strong curious, I explore the designs in our world. As a UX designer, I do interface design, graphic design and user experience design.</p>
 								</div>
 							</div>
 						</div>
@@ -288,7 +288,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Research</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p> Research is a method to see what everyone has seen and discover the things that no one has thought before. I've conducted 100+ hours of field research including interview, survey and so on. </p>
+									
 								</div>
 							</div>
 						</div>
@@ -299,7 +300,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Coding</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I've learned C/C++, Python, HTML/CSS, PHP and Javascript. </p>
+									
 								</div>
 							</div>
 						</div>
@@ -309,8 +311,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-heart3"></i>
 								</span>
 								<div class="desc">
-									<h3>Empathy</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Emphathy</h3>
+									<p> Emphathy is all about standing in someone's shoes, feeling with someone's heart and seeing from other's perspective. Regard myself as a user-centered designer, emphathy always comes in first priority.</p>
 								</div>
 							</div>
 						</div>
@@ -321,7 +323,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Prototyping</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p> If prototype is intersection of idea and reality, then prototyping is the ability to give ideas to life. With prototyping, I can exhibit my blueprints to others and test them over and over.</p>
 								</div>
 							</div>
 						</div>
@@ -332,7 +334,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Collabration</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p><strong>Teamwork <br> makes  <br> the <br> dreamwork.</strong> <br>
+									I embrace collabration with a variety of people. </p>
 								</div>
 							</div>
 						</div>
@@ -347,8 +350,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="1985" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="413" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Tacos</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
