--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Work</title>
+    <title>Eric's UI Design</title>
     <meta name="description" content="Eric Chi's work">
     <meta name="keywords" content="Eric Chi UX UI Design Portfolio">
     
@@ -35,8 +35,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <h2>Social Design: Community-Supported Farm for Indigenous People</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>    
+          <h2>1. Error 404 Page</h2>
+          <img src="work/img/404.png">
+             
         </div>
       </div>
 
