--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>chiyyyy@utexas.edu</a></p>
+									<a href="mailto:chiyyyy@utexas.edu"><p>chiyyyy@utexas.edu</p></a>
 								</div>
 							</div>
 
@@ -482,7 +482,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>512-201-0220</a></p>
+									<a href="tel:5122010220"><p>512-201-0220</p></a>
 								</div>
 							</div>
 						</div>
