--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
-								<a href="work.html" target="blank"><div class="desc">
+								<a href="Collection.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Work 04</h1>
-										<span>Application</span>
+										<h1>UI Design Collection</h1>
+										<span>Web page</span>
 									</div>
 								</div>
 							</div>
