--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 							<a href="work.html" target="blank">	<div class="desc">
 									<div class="con">
-										<h1>Work 01</h1>
+										<h1>So Cool English</h1>
 										<span>Website</span>
 									</div>
 								</div>
@@ -207,8 +207,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<a href="work.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Work 02</h1>
-										<span>Animation</span>
+										<h1>CSA Farm</h1>
+										<span>Research & Design</span>
 									</div>
 								</div>
 							</div>
@@ -217,8 +217,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<div class="project" style="background-image: url(images/img-3.jpg);">
 								<a href="work.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>Work 03</h1>
-										<span>Illustration</span>
+										<h1>Military Village Revival</h1>
+										<span>Research & Design</span>
 									
 									</div>
 								</div>
