--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <h2>1. Error 404 Page</h2>
+          <h2></h2>
 
         
         </div>
@@ -43,10 +43,12 @@
   </div>
 </div>
 
-      <video autoplay loop >
+
+
+      <<video autoplay loop width="50%" height="30%">
       	 <source src="work/img/Socool1.mp4" type="video/mp4">
 			"Your browser does not support the video tag."
-       	</video>
+       	</video> 
       
 
 
