--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<a href="Collection.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>UI Design Collection</h1>
-										<span>Web page</span>
+										<span>Design</span>
 									</div>
 								</div>
 							</div>
