--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>Want to know more about me? <br> Download my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1CQiBwhw1LFsk1AyKXWi3TyA21M-wCQUu/view?usp=sharing" class="btn-hire" target="blank">Download Resume</a>
+										<a href="https://drive.google.com/file/d/1CQiBwhw1LFsk1AyKXWi3TyA21M-wCQUu/view?usp=sharing" class="btn-hire" target="blank">Download <i class="icon-download-outline"></i></a>
 									</div>
 								</div>
 							</div>
@@ -253,6 +253,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-1">
 								<span class="icon">
+									
 									<i class="icon-pencil"></i>
 								</span>
 								<div class="desc">
