--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Thanks to <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with  <a href="https://colorlib.com" target="_blank">❤</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </a></span></small></p>
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
@@ -136,6 +136,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 										<p>With a background both in social sciences and information science, my focus is on users. This speaks to why I'm passionate about solving problems in both the digital and real world for all users. My work combines user research, user-centered design and UX/UI design. </p>
 
 										<p> As a student and designer, I desire challenges and chances to push myself. I believe challenges are the best method of self-reflection, which is the key to outstanding design. My career goal is to deliver a simple, but wonderful experience to all users.</p>
+
+
 										
 									</div>
 								</div>
