--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Eric Chi' Portfolio</title>
+	<title>Eric Chi's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Eric's Portfolio" />
 	<meta name="keywords" content="UI UX Design Designer Portfolio Eric Chi Yucheng Yu-Cheng" />
