--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
 </div>
 
 
-
+      <img src="work/img/co.svg">
      <!-- <video autoplay loop width="50%" height="30%">
       	 <source src="work/img/Socool1.mp4" type="video/mp4">
 			"Your browser does not support the video tag."
