--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html class="js">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,6 +51,7 @@
 
 	</head>
 	<body>
+	<div id="preloader"></div>
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -81,7 +82,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<li><a href="https://www.linkedin.com/in/yucheng-chi/" target="blank"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
-
+		
 		</aside>
 
 		<div id="colorlib-main">
@@ -414,7 +415,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
-	
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
