--- a/Collection.html
+++ b/Collection.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row probootstrap-lg-service probootstrap-animate" data-animate-effect="fadeIn">
         <div class="col-md-4">
-        <img src="work/img/404.png">
+        <p align="text-center"><img src="work/img/404.png"></p>
 
         </div>
         <!--<div class="col-md-8">
