--- a/work.html
+++ b/work.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Eric's UI Design</title>
-    <meta name="description" content="Eric Chi's work">
-    <meta name="keywords" content="Eric Chi UX UI Design Portfolio">
+    <title>So Cool English</title>
+    <meta name="description" content="So Cool English">
+    <meta name="keywords" content="So Cool English Eric Chi UX UI Design Portfolio">
     
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" href="work/css/styles-merged.css">
@@ -40,7 +40,7 @@
       </div>
       <div class="row probootstrap-lg-service probootstrap-animate" data-animate-effect="fadeIn">
         <div class="col-md-4">
-        <img src="work/img/co.jpg" width="100%" height="100%">
+        <img src="work/img/co.jpg" width="320px" height="100%">
 
         </div>
         <!--<div class="col-md-8">
