--- a/index.html
+++ b/index.html
@@ -332,20 +332,20 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="413" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Tacos</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="99" data-speed="250000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Clients</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="37" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Partners</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="413" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Tacos</span>
+						</div>
+						<div class="col-md-3 text-center animate-box">
+							<span class="colorlib-counter js-counter" data-from="293" data-to="1" data-speed="7500" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Love</span>
 						</div>
 					</div>
 				</div>
