--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row probootstrap-lg-service probootstrap-animate" data-animate-effect="fadeIn">
         <div class="col-md-4">
-        <img src="work/img/co.jpg" width="320px" height="100%">
+        <img src="work/img/socool1.svg">
 
         </div>
         <!--<div class="col-md-8">
