--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="So Cool English Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/main.css">
+	<link rel="stylesheet" type="text/css" href="work/css/SoCool.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
