--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -171,6 +171,11 @@
 
 		</section>
 
+		<section class="afterword wrapper">
+				<img class="animated wow fadeIn" src="work/img/bottom.png">
+
+			</section>
+
 	<footer>
 		<div class="wrapper">
 			<div class="rights">
