update logo link

--- a/Collection.html
+++ b/Collection.html
@@ -25,7 +25,7 @@
 
 	<section class="billboard dark">
 		<header class="wrapper dark">
-			<a href="ycchi.com"><img class="logo" src="work/img/eric.svg" width="10%" alt=""/></a>
+			<a href="index.html"><img class="logo" src="work/img/eric.svg" width="10%" alt=""/></a>
 			
 		</header>
 
