--- a/Collection.html
+++ b/Collection.html
@@ -43,14 +43,14 @@
 			<img src="work/img/404.png">
 		</div>
 
-
+	</section>
 	
 
 	<footer>
 		<div class="wrapper">
 			<div class="rights">
 			
-				<p>© All Copyrights reserved. <a href="ycchi.com"> Eric Chi </a>2018</p>
+				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2018</p>
 			</div>
 
 			
