--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -180,7 +180,7 @@
 		<div class="wrapper">
 			<div class="rights">
 			
-				<p>© All Copyrights reserved. <a href="ycchi.com"> Eric Chi </a>2018</p>
+				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2018</p>
 			</div>
 
 			
