--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
-								<a href="work.html" target="blank"><div class="desc">
+								<a href="Vote.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>CSA Farm</h1>
-										<span>Research & Design</span>
+										<h1>#Vote</h1>
+										<span>Front-End Development</span>
 									</div>
 								</div>
 							</div>
