--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									</div>
 								</div>
 							</div>
-						</div>
+						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
 							<div class="project" style="background-image: url(images/img-3.jpg);">
 								<a href="work.html" target="blank"><div class="desc">
