--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-1.jpg);">
-							<a href="SoCoolEng.html" target="blank">	<div class="desc">
+							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
 										<span>Web Development</span>
@@ -204,7 +204,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
-								<a href="Vote.html" target="blank"><div class="desc">
+								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>#Vote</h1>
 										<span>Front-End Development</span>
